# emeraude-engine

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  README.md  TODO.md  TODO.txt  format-code  gpu-infos-db.txt  install  setup-debian  test  test-emeraude  test-libraries  update-dependencies
cmake/: FindASIO.cmake  FindAubio.cmake  FindSAMPLERATE.cmake  SetupASIO.cmake  SetupAubio.cmake  SetupBZIP2.cmake  SetupBrotli.cmake  SetupBullet.cmake  SetupCPUFeatures.cmake  SetupEigen3.cmake  SetupFreetype.cmake  SetupGLFW3.cmake  SetupGLM.cmake  SetupGLSLang.cmake  SetupGTK3.cmake  SetupHWLOC.cmake  SetupHarfbuzz.cmake  SetupImGuiPostSources.cmake  SetupImGuiPreSources.cmake  SetupJPEG.cmake  SetupJsonCppPostSources.cmake  SetupJsonCppPreSources.cmake  SetupLZMA.cmake  SetupOpenAL.cmake  SetupOpenMP.cmake  SetupPNG.cmake  SetupPostSourcesImGui.cmake  SetupPostSourcesJsonCpp.cmake  SetupPreSourcesImGui.cmake  SetupPreSourcesJsonCpp.cmake  SetupReproc.cmake  SetupSampleRate.cmake  SetupSamplerate.cmake  SetupSndFile.cmake  SetupTagLib.cmake  SetupThreads.cmake  SetupVulkan.cmake  SetupZIP.cmake  SetupZLIB.cmake  SetupZSTD.cmake  (+2 more)
docs/: Notes.txt  gpu-infos-db.txt
docs/Doxygen/: Doxyfile
docs/Misc/: charfaq.html
docs/OpenAL/: ALC_SOFT_loopback.txt
docs/Schema/: world-entities.html
libraries/: Blob.hpp  CMakeLists.txt  DiamondSquare.hpp  Dummy.cpp  Dummy.hpp  FastJSON.cpp  FastJSON.hpp  FlagTrait.hpp  LockableTrait.cpp  LockableTrait.hpp  NamedItem.cpp  NamedItem.hpp  Observable.cpp  Observable.hpp  Observer.cpp  Observer.hpp  ParallelizableProcess.hpp  PerlinNoise.hpp  Singleton.hpp  SourceCodeParser.cpp  SourceCodeParser.hpp  Statistics.cpp  Statistics.hpp  String.cpp  String.hpp  Utility.cpp  Utility.hpp  Variant.cpp  Variant.hpp  Version.cpp  Version.hpp  libraries_config.hpp.in  platform.hpp
libraries/GameTools/: CardDeck.cpp  CardDeck.hpp  CardHand.cpp  CardHand.hpp  Dice.cpp  Dice.hpp
libraries/Hash/: Hash.cpp  Hash.hpp  MD5.cpp  MD5.hpp  SHA256.cpp  SHA256.hpp  SHA512.cpp  SHA512.hpp
libraries/KVParser/: Parser.cpp  Parser.hpp  Section.cpp  Section.hpp  Variable.cpp  Variable.hpp
libraries/Math/: BSpline.hpp  BSplinePoint.hpp  Base.hpp  BezierCurve.hpp  Circle.hpp  Coordinates.hpp  Cuboid.hpp  DeterminantAverage.hpp  Line.hpp  LineFormula.hpp  Matrix.hpp  NURBS.hpp  NURBSCurve.hpp  NURBSPoint.hpp  NURBSSurface.hpp  OrientedCuboid.hpp  Plane.hpp  Quaternion.hpp  Range.hpp  Rectangle.hpp  Segment.hpp  Shape2DInterface.hpp  Shape3DInterface.hpp  ShapeInterface.hpp  Sphere.hpp  Vector.hpp
libraries/Network/: HTTPHeaders.cpp  HTTPHeaders.hpp  HTTPRequest.cpp  HTTPRequest.hpp  HTTPResponse.cpp  HTTPResponse.hpp  Hostname.cpp  Hostname.hpp  Network.cpp  Network.hpp  Query.cpp  Query.hpp  URI.cpp  URI.hpp  URIDomain.cpp  URIDomain.hpp  URL.cpp  URL.hpp  asio_throw_exception.hpp
libraries/Path/: Directory.cpp  Directory.hpp  File.cpp  File.hpp  Path.cpp  Path.hpp
libraries/PixelFactory/: Area.hpp  Color.hpp  FileFormatInterface.hpp  FileFormatJpeg.hpp  FileFormatPNG.hpp  FileFormatTarga.hpp  FileIO.cpp  FileIO.hpp  Font.cpp  Font.hpp  Gradient.hpp  Mandelbrot.hpp  Margin.hpp  Pixmap.hpp  Processor.hpp  Types.hpp
libraries/Testing/: _MathTest.hpp_  _NetworkTest.hpp_  _PixelFactoryTest.hpp_  main.cpp  test_Hash.cpp  test_LineFormula.cpp  test_MathBasics.cpp  test_MathMatrix.cpp  test_MathVector.cpp  test_ObserverPattern.cpp  test_ParallelizableProcess.cpp  test_String.cpp
libraries/Third-Party-Inclusion/: asio.hpp  eigen.hpp  freetype.hpp  glm.hpp  jpeg.hpp  json.hpp  png.hpp  samplerate.hpp  sndfile.hpp  zlib.hpp
libraries/Time/: AbstractElapsedTime.cpp  AbstractElapsedTime.hpp  AbstractStatistics.cpp  AbstractStatistics.hpp  ElapsedCPUTime.cpp  ElapsedCPUTime.hpp  ElapsedTime.hpp  Interval.cpp  Interval.hpp  PrintScopeCPUTime.cpp  PrintScopeCPUTime.hpp  PrintScopeTime.hpp  ScopeElapsedCPUTime.cpp  ScopeElapsedCPUTime.hpp  ScopeElapsedTime.hpp  StatisticsCPUTime.cpp  StatisticsCPUTime.hpp  StatisticsTime.hpp  Time.hpp  TimedEvent.cpp  TimedEvent.hpp  TimedEventsInterface.cpp  TimedEventsInterface.hpp
libraries/VertexFactory/: FileFormatFBX.hpp  FileFormatInterface.hpp  FileFormatMD2.hpp  FileFormatMD3.hpp  FileFormatMD5.hpp  FileFormatMDL.hpp  FileFormatNative.hpp  FileFormatOBJ.hpp  FileIO.cpp  FileIO.hpp  Grid.hpp  GridQuad.hpp  Shape.hpp  ShapeAssembler.hpp  ShapeBuilder.hpp  ShapeBuilderOptions.hpp  ShapeEdge.cpp  ShapeEdge.hpp  ShapeGenerator.hpp  ShapeTriangle.hpp  ShapeVertex.hpp  Silhouette.hpp  TextureCoordinates.hpp  TreeGenerator.cpp  TreeGenerator.hpp  TriangleGenerator.hpp  Types.hpp
libraries/WaveFactory/: Processor.cpp  Processor.hpp  Types.hpp  Wave.cpp  Wave.hpp
resources/: vk_layer_settings.txt
resources/test-assets/: fixed-font.tga
src/: AbstractDoc.cpp  AbstractDoc.hpp  Argument.cpp  Argument.hpp  ArgumentDoc.cpp  ArgumentDoc.hpp  Arguments.cpp  Arguments.hpp  CachedDownloadItem.cpp  CachedDownloadItem.hpp  CommandContainer.cpp  CommandContainer.hpp  Console.cpp  Console.hpp  ConsoleControllable.cpp  ConsoleControllable.hpp  ConsoleExpression.cpp  ConsoleExpression.hpp  Constants.hpp  Core.ConsoleBinds.cpp  Core.cpp  Core.hpp  CursorAtlas.cpp  CursorAtlas.hpp  DownloadItem.cpp  DownloadItem.hpp  Emeraude.pc.in  FileSystem.cpp  FileSystem.hpp  Help.cpp  Help.hpp  Identification.cpp  Identification.hpp  MemoryAllocator.cpp  MemoryAllocator.hpp  NetworkManager.cpp  NetworkManager.hpp  Notifier.cpp  Notifier.hpp  PlatformManager.cpp  (+29 more)
src/AVConsole/: AbstractVirtualAudioDevice.cpp  AbstractVirtualAudioDevice.hpp  AbstractVirtualDevice.cpp  AbstractVirtualDevice.hpp  AbstractVirtualVideoDevice.cpp  AbstractVirtualVideoDevice.hpp  Manager.cpp  Manager.hpp  Types.hpp
src/Animations/: AnimatableInterface.cpp  AnimatableInterface.hpp  AnimationInterface.hpp  ConstantValue.cpp  ConstantValue.hpp  Interpolation.cpp  Interpolation.hpp  KeyFrame.cpp  KeyFrame.hpp  RandomValue.cpp  RandomValue.hpp  Sequence.cpp  Sequence.hpp  (+1 more)
tools/: tools-lib.php
tools/lab/: CMakeLists.txt
tools/lab/src/: main.cpp
(+1266 files in other folders)
